[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/CountrySelect.gd" id="1"]

[node name="CountrySelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.07, 0.1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
text = "Wybór scenariusza"

[node name="ScenarioList" type="ItemList" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 140)

[node name="ScenarioDetails" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 120)
bbcode_enabled = true
text = ""

[node name="CountryTitle" type="Label" parent="CenterContainer/VBoxContainer"]
text = "Wybór państwa"

[node name="CountryList" type="ItemList" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 240)

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Start kampanii"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Powrót"
